# ncmdump-lsposed

./: .gitignore  .gitmodules  LICENSE  README.cn.md  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/java/com/example/ncmdumplsposed/hook/: NcmdumpHookEntry.kt
app/src/main/java/com/example/ncmdumplsposed/nativebridge/: NativeNcmdump.kt
app/src/main/java/com/example/ncmdumplsposed/ui/: MainActivity.kt
app/src/main/java/moe/tnxg/ncmdumplsposed/hook/: NcmdumpHookEntry.kt
app/src/main/java/moe/tnxg/ncmdumplsposed/nativebridge/: NativeNcmdump.kt
app/src/main/java/moe/tnxg/ncmdumplsposed/ui/: MainActivity.kt
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/values/: strings.xml
rust/: Cargo.toml
rust/crates/ncmdump-android/src/: lib.rs
rust/ncmdump-android/: Cargo.toml
rust/ncmdump-android/src/: lib.rs
scripts/: build-android-libs.sh
